fix: text align in Greetings component

--- a/src/components/Greetings/Greetings.module.scss
+++ b/src/components/Greetings/Greetings.module.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     gap: 30px;
     align-items: center;
+    text-align: center;
 
     span {
         font-family: MontserratBold;
